Written Rules for About Page amd created 404 page

--- a/About.html
+++ b/About.html
@@ -6,6 +6,6 @@
     <title>About</title>
 </head>
 <body>
-    <h1>Hey This is About Page</h1>
+    <h1>Hey This is HTML About Page</h1>
 </body>
 </html>
