--- a/504.html
+++ b/504.html
@@ -10,7 +10,7 @@
 
     <div class="container">
         <div class="errbx">
-            <h1 class="t404err">Oops...Your Search returned no result(s)</h1> <br/>
+            <h1 class="t404err">Oops...Your Search returned no result!(s)</h1> <br/>
             <a class="link" href="#"> <button class="btn"> Return to homepage </button></a>
         </div>
     </div>
